move to .24 version

--- a/zapravkom/logistic/templates/main.html
+++ b/zapravkom/logistic/templates/main.html
@@ -24,6 +24,24 @@
         #form{
           font-size: small;
         }
+        .btn-primary{
+          background-color: #3696d2;
+        }
+        .button-task{
+          background-color: #3696d2;
+        }
+        .button-carier{
+          background-color: #28709e;
+        }
+        .button-jobs{
+          background-color: #184561;
+        }
+        .text-info{
+          color: #3696d2;
+        }
+        .btn-success{
+          background-color: #28a745;
+        }
     </style>
     {% if user.is_authenticated %}
     <div class="container menu bg-dark">
@@ -37,9 +55,9 @@
           </li>
           <li class="nav-item active mr-1">
             <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                  <a class="btn btn-warning" href="/logistic/task">Заявки</a>
+                  <a class="btn btn-primary button-task" href="/logistic/task">Заявки</a>
                   <div class="btn-group" role="group">
-                    <button id="btnGroupDrop1" type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle button-carier" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Курьеры
                     </button>
                     <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
@@ -47,7 +65,7 @@
                       <a class="dropdown-item" href="/logistic/delivery/1">Владислав</a>
                     </div>
                   </div>
-                  <a class="btn btn-info" href="/logistic/servicetask">Работы</a>
+                  <a class="btn btn-primary button-jobs" href="/logistic/servicetask">Работы</a>
           </div>
           </li>
 
@@ -72,7 +90,7 @@
           </ul>
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Hi, {{ user.username }} </a>
           <a class="nav-link btn btn-secondary btn-sm" href="/logistic/profile">Профиль</a>
-          <i class="material-icons">account_box</i>
+          
           <a class="nav-link account_box" href="/logistic/accounts/logout">Выйти</a>
 
       </div>
