--- a/zapravkom/logistic/templates/index.html
+++ b/zapravkom/logistic/templates/index.html
@@ -60,8 +60,8 @@ function ClientDelete(id){
 </script>
 
   <div class="container bg-dark">
-    <div class="jumbotron">
-  <h1 class="display-4 text-primary">Zapravkom CRM <span class="badge badge-info">ver .22</span></h1>
+  <div class="jumbotron">
+  <h4 class="display-4 " style="color:#3696d2">Заправком CRM <span class="badge badge-info" style="background-color:#e2e3e5; color: #343a40; font-size: 1vw;">ver .24</span></h4>
   <p class="lead"><small class="text-right">  Сегодня {{ date }}</small></p>
   <hr class="my-4">
   <div class="alert alert-secondary">
