--- a/zapravkom/logistic/templates/task_list.html
+++ b/zapravkom/logistic/templates/task_list.html
@@ -87,9 +87,18 @@ function TaskStatus(id){
 
 </script>
 
+<style>
+  thead{
+    background-color: #3696d2;
+  }
+  tr:hover{
+    background-color: #8f8f8f;
+  }
+</style>
+
 <div class="container bg-dark">
   <div class="container bg-dark">
-    <a class="btn btn-success" data-toggle="collapse" href="#collapseForm" role="button" aria-expanded="false">
+    <a class="btn btn-success" data-toggle="collapse" href="#collapseForm" role="button" aria-expanded="false" style="background-color:#64a626">
         Добавить задачу
       </a>
   </div>
@@ -109,7 +118,7 @@ function TaskStatus(id){
 
 
 
-<table class="table table-striped table-dark">
+<table class="table table-dark">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -129,12 +138,30 @@ function TaskStatus(id){
   </thead>
   <tbody>
 
+
 {% for item in list %}
-    <tr>
-      <th scope="row">{{ item.id }}</th>
-      <td>
-      <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" value="{{ item.client }}">        
-      </td>
+    <tr data-toggle="modal" data-id="{{ item.id }}" data-target="#TaskModal{{ item.id }}">
+    <div class="modal fade" id="TaskModal{{ item.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalCenterTitle">Редактирование задачи №{{ item.id }}</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+              Разместить тут форму, сгенерированную из REST запроса по id.
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+    </div>
+      <td>{{ item.id }}</td>
+      <td>{{ item.client }}</td>
       <td>{{ item.description }}</td>
       <td>{{ item.employee }}</td>
       <td>{{ item.date }}</td>
